修改图片路径

--- a/软件与系统安全/软件与系统安全作业.md
+++ b/软件与系统安全/软件与系统安全作业.md
@@ -6,7 +6,7 @@
 
 第一步：代码内容如下 保存为1.c文件
 
-![1](/Users/cookie/Desktop/软件与系统安全/1.jpg)
+![](/软件与系统安全/1.jpg)
 
 第二步：编译链接  
 
@@ -16,15 +16,15 @@
 
 生成1.exe 
 
-![2](/Users/cookie/Desktop/软件与系统安全/2.jpg)
+![](/软件与系统安全/2.jpg)
 
 第三步：使用 winhex软件直接打开1.exe 找到 hello world 修改成 Hello CUC
 
-![3](/Users/cookie/Desktop/软件与系统安全/3.jpg)
+![](/软件与系统安全/3.jpg)
 
 第四步：重新运行1.exe,```Hello world ```成功显示为``` Hello CUC```
 
-![4](/Users/cookie/Desktop/软件与系统安全/4.jpg)
+![](/软件与系统安全/4.jpg)
 
 # 第二次
 
@@ -37,12 +37,12 @@
 
 反汇编：dumpbin /disasm 1.exe
 
-![6](/Users/cookie/Desktop/软件与系统安全/6.jpg)
+![](/软件与系统安全/6.jpg)
 
 其中 `1400003f0h` 对应 `标题`，`1400003f8h` 对应 `Hello world`
 
 查看PE文件头信息（以下省略区块表）：`dumpbin /headers /nologo xxx.exe`
 
-![5](/Users/cookie/Desktop/软件与系统安全/5.jpg)
+![](/软件与系统安全/5.jpg)
 
 从输出得知基地址(ImageBase)为 `1400000h` ，计算出字符串 `Text` 的地址为 `1400003f0h-1400000h=3f0h`，字符串 `Hello world` 的地址为`1400003f8h-1400000h=3f8h`。
