前四次作业

--- a/软件与系统安全/软件与系统安全作业.md
+++ b/软件与系统安全/软件与系统安全作业.md
@@ -1,48 +1,100 @@
-# 第一次作业
-
-编写一个release版本的 hello world 程序。通过修改程序可执行文件的方式（不是修改源代码），使得程序运行后显示的内容不为hello world，变成 hello cuc！
+####  1. 编写一个release版本的 hello world 程序。通过修改程序可执行文件的方式（不是修改源代码），使得程序运行后显示的内容不为hello world，变成 hello cuc！
 
 提示：一定要在编译选项中将调试信息相关的编译连接选项去掉，否则程序体积会比较大，而且存在很多“干扰”信息。
 
+
+
 第一步：代码内容如下 保存为1.c文件
 
-![](/软件与系统安全/1.jpg)
+![](/软件与系统安全/Hello_world.jpg)
 
-第二步：编译链接  
+第二步：编译链接 ,生成1.exe 
 
-`cl /c 1.c `
+```bash
+cl /c 1.c 
 
- `link /ENTRY:main /ALIGN:16 User32.lib 1.obj `
+link /ENTRY:main /ALIGN:16 User32.lib 1.obj 
+```
 
-生成1.exe 
+![](/软件与系统安全/cl_link.jpg)
 
-![](/软件与系统安全/2.jpg)
+第三步：使用 winhex软件直接打开1.exe ,找到 "Hello world "修改成 "Hello CUC"
 
-第三步：使用 winhex软件直接打开1.exe 找到 hello world 修改成 Hello CUC
-
-![](/软件与系统安全/3.jpg)
+![](/软件与系统安全/hello_cuc.jpg)
 
 第四步：重新运行1.exe,```Hello world ```成功显示为``` Hello CUC```
 
-![](/软件与系统安全/4.jpg)
+![](/软件与系统安全/exe_cuc.jpg)
 
-# 第二次
 
-上一题的程序中，修改的显示内容变为一个很长的字符串（至少2kb长）。并且保证程序正常运行不崩溃。
+
+####  2. 上一题的程序中，修改的显示内容变为一个很长的字符串（至少2kb长）。并且保证程序正常运行不崩溃。
 
 提示，可执行文件中原有的空间有限，必须要新加入数据，加入数据后必须要修改.text字段中的指针。
 
 
-使用上一题中生成的可执行文件
 
-反汇编：dumpbin /disasm 1.exe
+第一步：使用上一题中生成的可执行文件，反汇编：dumpbin /disasm 1.exe
 
-![](/软件与系统安全/6.jpg)
+![](/软件与系统安全/disasm.jpg)
 
 其中 `1400003f0h` 对应 `标题`，`1400003f8h` 对应 `Hello world`
 
-查看PE文件头信息（以下省略区块表）：`dumpbin /headers /nologo xxx.exe`
+第二步：查看PE文件头信息（以下省略区块表）：dumpbin /headers /nologo xxx.exe
 
-![](/软件与系统安全/5.jpg)
+![](/软件与系统安全/headers.jpg)
 
-从输出得知基地址(ImageBase)为 `1400000h` ，计算出字符串 `Text` 的地址为 `1400003f0h-1400000h=3f0h`，字符串 `Hello world` 的地址为`1400003f8h-1400000h=3f8h`。
+从输出得知基地址(ImageBase)为 `1400000h` ，计算出字符串 `Text` 的地址为 `1400003f0h-1400000h=3f0h`，字符串 `Hello world` 的地址为`1400003f8h-1400000h=3f8h`。用十六进制编辑器FlexHex查看该PE文件，验证地址偏移。
+
+![](/软件与系统安全/addre_hello.jpg)
+
+第三步：在文件末尾添加 `a` ，然后将.text区块中指向 `Hello CUC` 的指针改为指向新增的字符串的地址，保存即可。
+
+#### 3、在notepad（32位64位均可）中，输入一段文字。然后使用调试器，在内存中修改这段文字。使得没有在界面操作notepad的修改文字的情况下。notepad中显示的文字变化。
+
+提示：在调试器中定位控件缓存的内存地址，可以用搜索、逆向、消息截获分析、API截获分析等方法。
+
+
+
+原理：Windbg直接修改内存，找到存放字符串的内存地址，对其进行修改，再让进程继续执行。
+
+第一步：首先打开notepad，在文件中输入hhhhhhhh。使用WinDbg依次点击 `File - Attach to a Process(F6)` 附加到notepad进程。列出已分配的堆，并在其中查找字符串 `hhhhhhhh`。
+
+![](/软件与系统安全/in.jpg)
+
+![](/软件与系统安全/win_notepad.jpg)
+
+```bash 
+# 查看所有堆
+!heap -a
+
+# 查找字符串
+s -u 堆起始地址 L000ff000 "待查找的字符串"
+
+# 显示Unicode
+du 00000225`3f9f5880
+```
+
+![](/软件与系统安全/heap_a.jpg)
+
+第二步：对第一个内存位置的数据进行修改，并让进程继续运行。此时记事本最小化重新从任务栏弹出，显示修改后的字符串。
+
+```bash
+# 修改字符串
+ezu 00000225`3f9f5880 "AAAAAAAA"
+
+# 显示Unicode
+du  00000225`3f9f5880
+
+# 继续运行程序
+g
+```
+
+![](/软件与系统安全/du_ezu_g.jpg)
+
+![](/软件与系统安全/out.jpg)
+
+#### 4、通过调试器监控计算器程序的运行，每当运行结果为666时，就改为999。
+
+提示：找到运行结果在内存中保存的地址。监控 “=” 按键消息等。
+
